Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.0.1, 5.1.0 Beta 1
-
None
-
Fedora 18
Linux 3.9.4-200.fc18.i686.PAE #1 SMP i686 i686 i386 GNU/Linux
-
1f3d0ae63b2501460fc1c75f22b579b29147a80d
Description
The error occurs when setting a property of a "wrapped" component:
e.g.
--Main Window (has a button and tries to set label.font.family)
— Button (has a label and offers access to it via a property)
---- Label (text)
This example is attached. When opening the Main window with the qt5 qmlviewer, the program crashes due to an index out of range error. However, if the qt4 version of qmlviewer is used, everything is fine.
Furthermore replacing the QtQuick 1.1 import with QtQuick 2.0 also appears to be fixing the problem.
The error also occurs with Qt5.1.0 Beta1.
Here is the backtrace (generated by the qt501 version of qmlviewer):
#0 0xb77f6424 in __kernel_vsyscall () #1 0x4c7edb7f in raise () from /lib/libc.so.6 #2 0x4c7ef4d3 in abort () from /lib/libc.so.6 #3 0xb5d8ab93 in QMessageLogger::fatal(char const*, ...) const () from /usr/local/qt501/qtbase/lib/libQt5Core.so.5 #4 0xb5d87293 in qt_assert_x(char const*, char const*, char const*, int) () from /usr/local/qt501/qtbase/lib/libQt5Core.so.5 #5 0xb7465b87 in QList<QDeclarativeCompiledData::TypeReference>::at(int) const [clone .part.53] () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #6 0xb74ae6fb in QDeclarativeCompiler::genValueTypeProperty(QDeclarativeParser::Object*, QDeclarativeParser::Property*) () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #7 0xb74af02e in QDeclarativeCompiler::genObjectBody(QDeclarativeParser::Object*) () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #8 0xb74aef60 in QDeclarativeCompiler::genObjectBody(QDeclarativeParser::Object*) () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #9 0xb74adbf0 in QDeclarativeCompiler::genObject(QDeclarativeParser::Object*) () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #10 0xb74b8098 in QDeclarativeCompiler::compileTree(QDeclarativeParser::Object*) () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #11 0xb74b98bc in QDeclarativeCompiler::compile(QDeclarativeEngine*, QDeclarativeTypeData*, QDeclarativeCompiledData*) () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #12 0xb74d3824 in QDeclarativeTypeData::compile() () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #13 0xb74d5a70 in QDeclarativeTypeData::done() () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #14 0xb74d2f32 in QDeclarativeDataBlob::tryDone() () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #15 0xb74d3f9b in QDeclarativeDataLoader::load(QDeclarativeDataBlob*) () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #16 0xb74d47b0 in QDeclarativeTypeLoader::get(QUrl const&) () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #17 0xb74974b6 in QDeclarativeComponent::loadUrl(QUrl const&) () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #18 0xb7497915 in QDeclarativeComponent::QDeclarativeComponent(QDeclarativeEngine*, QUrl const&, QObject*) () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #19 0xb756b5ba in QDeclarativeViewPrivate::execute() () from /usr/local/qt501/qtbase/lib/libQt5Declarative.so.5 #20 0x0805d98b in QDeclarativeViewer::open(QString const&) () #21 0x0805789d in main ()
and the ASSERT out of range error:
ASSERT failure in QList<T>::at: "index out of range", file /usr/local/qt501/qtbase/include/QtCore/../../src/corelib/tools/qlist.h, line 454
Attachments
Issue Links
- is required for
-
QTBUG-32183 Issues to be fixed in 5.1.1 (next patch release)
-
- Closed
-
For Gerrit Dashboard: QTBUG-31576 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
61117,2 | Fix regression from Qt 4 for deep group properties | stable | qt/qtquick1 | Status: MERGED | +2 | 0 |